<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgCompanyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/llMobile"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/continue_task"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/llMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="@dimen/dimen_8dp"
            android:paddingStart="@dimen/dimen_8dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoDetectLanguage="true"
            app:ccp_clickable="true"
            app:ccp_contentColor="@android:color/black"
            app:ccp_countryAutoDetectionPref="NETWORK_LOCALE_SIM"
            app:ccp_defaultNameCode="IN"
            app:ccp_showFlag="false"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_textGravity="CENTER" />

        <EditText
            android:id="@+id/etMobileNumber"
            style="@style/MyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:digits="0123456789+"
            android:hint="@string/string_phone_number"
            android:inputType="phone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCodeVerificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgCompanyLogo"
        android:layout_margin="@dimen/dimen_16dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnVerification">

        <EditText
            android:id="@+id/etVerificationCode"
            style="@style/MyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:background="@drawable/border"
            android:digits="0123456789"
            android:gravity="center"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:visibility="visible" />

        <TextView
            android:id="@+id/btnCodeResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/resend_code"
            android:textColor="@android:color/black"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/llMobile"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/verify"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>