<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_border"
    android:padding="@dimen/dimen_24dp"
    tools:context=".LiveClassActivity">

    <TextView
        android:id="@+id/tv_session_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:text="@string/session_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <view
        android:id="@+id/view_holder1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_color"
        app:layout_constraintTop_toBottomOf="@id/tv_session_time" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/view_holder1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 1\n\n"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_show_more_button_with_three_dots"
                app:layout_constraintEnd_toEndOf="parent" />


            <ImageView
                android:id="@+id/btn_up"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:src="@android:drawable/arrow_up_float"
                app:layout_constraintTop_toBottomOf="@id/question_text" />

            <ImageView
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:src="@android:drawable/arrow_down_float"
                app:layout_constraintLeft_toRightOf="@id/btn_up"
                app:layout_constraintTop_toBottomOf="@id/question_text" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:src="@drawable/user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/username"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/profile" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_color"
        app:layout_constraintBottom_toTopOf="@id/llQuestion" />

    <LinearLayout
        android:id="@+id/llQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ask_your_doubts" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_share" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>